# h3d

./: README.md  run.sh
catalyst/: CMakeLists.txt  UH3DAdaptor.cxx  insitu-4views.py  insitu.py  run.sh.in
scripts/: script.cmd
scripts/batch/: bash.sh  qsub.sh  qsub_8b.sh
scripts/idl/: den_pp.pro  viewer.pro
src/: 3dHybrid.f90  3dHybrid.of90  README  dipole_field.f90  dipole_field.of90  dipole_field_2d.f90  dipole_field_2d.of90  erf_mod.mod  etacal.f90  etacal.of90  etacal_2d.f90  etacal_2d.of90  f_mod.mod  field_2d.f90  field_2d.f90.April.29.2013  field_2d.of90  field_2d.orig.f90  flux_mod.mod  fprime_mod.mod  functions.f90  functions.of90  functions_f90.mod  functions_sp.f90  gammaln_mod.mod  gcf_mod.mod  get_environment_variable1.c  get_environment_variable1.c.nashi  get_environment_variable1.ogcc  get_environment_variable2.c  get_environment_variable2.c.nashi  get_environment_variable2.ogcc  gser_mod.mod  inject.f90  inject.of90  integer_to_character.c  integer_to_character.c.LANL  integer_to_character.c.nashi  integer_to_character.ogcc  makefile  makefile.gordon  (+26 more)
src/bk/: field_2d.f90.bak  vect.f90
